--- a/Phase2/browser/package.json
+++ b/Phase2/browser/package.json
@@ -11,6 +11,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "history": "^5.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
