--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "sqlite3.h": "c",
         "types.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "random": "c"
     }
 }
