--- a/Phase2/browser/package.json
+++ b/Phase2/browser/package.json
@@ -12,7 +12,9 @@
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "googleapis": "^92.0.0",
     "history": "^5.2.0",
+    "jws": "^4.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
