--- a/Phase2/browser/package.json
+++ b/Phase2/browser/package.json
@@ -3,13 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/axios": "^0.14.0",
-    "@types/react-bootstrap": "^0.32.29",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-router-dom": "^5.3.2",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "googleapis": "^92.0.0",
@@ -20,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.0-beta.8",
     "react-scripts": "5.0.0",
+    "ssh2-sftp-client": "^7.2.1",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
   },
